# fullRAG

./: .gitignore  README.md  document.py  embeddings.py  embeddingsFactory.py  llm.py  main.py  pdfDocument.py  pyproject.toml  requirements.txt  similaritySearch.py
backup/: biden.data  ma_sauvegarde.data  ma_sauvegarde.index
data/: Following is a transcript of President Biden.txt  chunks.json  emb_chunks.json  emb_prompt.json  nearest.json
src/: RagChunkText.py  RagEmbeddings.py  RagFaiss.py  RagLLM.py  RagPdf2Text.py  RagQueryDoc.py  RagQueryIndex.py  RagStoreDoc.py  RagStoreFaiss.py  embeddingsFactory.py  ollamaWrapper.py  prompt.py  querydoc.py  similaritySearchEngine.py
src/FullRag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/elements/: FAISSWrapper.py  document.py  embeddingsFactory.py  ollamaWrapper.py  prompt.py  similaritySearchEngine.py
src/utils/: CONST.py  functions.py  traceOut.py
vstore/: biden.index
